# Wire

./: .gitignore  CMakeLists.txt  bench.cpp  bench.h  bitboard.cpp  bitboard.h  board.cpp  board.h  constants.h  eval.cpp  globals.h  main.cpp  move.cpp  move.h  move_ordering.cpp  move_ordering.h  movegen.cpp  movegen.h  piece.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  uci.cpp  utils.cpp  utils.h
src/: bench.cpp  bench.h  bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  move.cpp  move_ordering.cpp  move_ordering.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  uci.cpp  uci.h
